# rust-subscription-server

./: Cargo.toml
migrations/2024-02-09-071306_new-subscription/: up.sql
src/: actions.rs  db.rs  main.rs  models.rs  routes.rs  schema.rs
