[package]
name = "subscription"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.3"
actix-web = "4.5.1"
chrono = { version = "0.4.33", features = ["serde"] }
derive_more = "0.99.17"
diesel = { version = "2.1.4", features = ["postgres", "r2d2", "uuid", "chrono"] }
dotenv = "0.15.0"
once_cell = "1.19.0"
reqwest = { version = "0.11.24", features = ["json"] }
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
uuid = { version = "1.7.0", features = ["v4", "serde"] }
